@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7 2002/09/20 00:33:11 hubertf Exp $
+$NetBSD: CHANGES,v 1.8 2002/09/20 09:52:28 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -2909,3 +2909,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Added netscape7 [jschauma 2002-09-19]
 	Updated 6to4 to 1.3 [hubertf 2002-09-20]
 	Updated abcde to 2.0.3 [hubertf 2002-09-20]
+	Updated libyahoo to 0.18.4 [jlam 2002-09-20]
